--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
+        "guzzlehttp/guzzle": "^7.4",
+        "illuminate/http": "^9.0",
         "laravel-zero/framework": "^9.1.3",
         "nunomaduro/termwind": "^1.13"
     },
